--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,20 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope":0,
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/function-component-definition":0
+      "prettier/prettier": "error",
+      "quotes": [2, "double", { "avoidEscape": true }],
+      "array-callback-return": "off",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "react/react-in-jsx-scope": "off",
+      "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+      "object-curly-newline": [
+        "error",
+        {
+          "ObjectExpression": { "consistent": true, "multiline": true },
+          "ObjectPattern": { "consistent": true, "multiline": true },
+          "ImportDeclaration": { "consistent": true, "multiline": true },
+          "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+        }
+      ]
     }
 }
