--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.27.0",
     "history": "^5.1.0",
     "jwt-decode": "^3.1.2",
+    "msw": "^0.36.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
