--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "msw": "^0.36.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
